# BanEDrum

./: .mxproject  BanEDrum.ioc  README.md
BanGTsynth/: BanGTsynth.h  hardware_interfance.c  hardware_interfance.h
BanGTsynth/BG_Midi_Controller/: midi_controller.c  midi_controller.h  midi_info.h  standard_request _processing.c  standard_request _processing.h
BanGTsynth/BG_sequencer/: sequencer.c  sequencer.h
BanGTsynth/bg_read/: bg_read.c  bg_read.h
BanGTsynth/play/: play.c  play.h
BanGUI/BG_List/: bg_list.c  bg_list.h
BanGUI/base_func/: font.h  gui_tool.c  gui_tool.h
BanGUI/page/: bg_page.c  bg_page.h  page_manager.c  page_manager.h
Core/Inc/: stm32f4xx_it.h
Core/Src/: adc.c  dma.c  gpio.c  i2s.c  main.c  sdio.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
MDK-ARM/: BanEDrum.map  BanEDrum.uvguix.BanGO  BanEDrum.uvguix.Hasee  BanEDrum.uvoptx  BanEDrum.uvprojx  keil-build-viewer-record.txt  startup_stm32f401xc.lst  startup_stm32f401xc.s
MDK-ARM/BanEDrum/: BanEDrum.axf  BanEDrum.build_log.htm  BanEDrum.hex  BanEDrum.htm  BanEDrum.lnp  BanEDrum.map  BanEDrum_BanEDrum.dep  adc.crf  adc.d  bg_download.crf  bg_download.d  bg_envelope_generator.crf  bg_envelope_generator.d  bg_flash_manager.crf  bg_flash_manager.d  bg_lcd.crf  bg_lcd.d  bg_read.crf  bg_read.d  bsp_driver_sd.crf  bsp_driver_sd.d  delay.crf  delay.d  dma.crf  dma.d  fatfs.d  gpio.crf  gpio.d  hardware_interfance.crf  hardware_interfance.d  i2s.crf  (+118 more)
flash_manage_unit/: CMakeLists.txt
flash_manage_unit/include/: BanGTsynth.h
flash_manage_unit/src/: main.c
logic_run/: logic_run.c  logic_run.h
(+26 files in other folders)
